Migrate to spring boot 3.4.1